/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'org.hamcrest:java-hamcrest:2.0.0.0'
    api 'org.hamcrest:hamcrest-junit:2.0.0.0'
    api 'org.jetbrains:annotations:RELEASE'
    implementation 'org.jetbrains:annotations:16.0.2'
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.mockito:mockito-core:5.4.0'
}

group = 'co.unruly'
version = '0.8.14-SNAPSHOT'
description = 'control'

java {
    withSourcesJar()
    withJavadocJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
